quarkus-observability-demo-full-k8s/src/main/openshift/legume-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: legume
    app.openshift.io/runtime: quarkus
  name: legume
  namespace: quarkus-demo
spec:
  host: legume.apps.openshift-dev.nailedit.duckdns.org
  port:
    targetPort: http
  to:
    kind: Service
    name: legume
    weight: 100
  wildcardPolicy: None
